[gd_scene load_steps=15 format=3 uid="uid://c3qv5yb6vh3ch"]

[ext_resource type="Script" uid="uid://csi4ocd75bdqh" path="res://scenes/menu_ui/settings_ui/settings.gd" id="1_cisaa"]
[ext_resource type="AudioStream" uid="uid://oylfmgwjim1t" path="res://scenes/menu_ui/settings_ui/Bomfunk MC's - Freestyler (Video Original Version).mp3" id="2_8ujg4"]
[ext_resource type="Texture2D" uid="uid://ddjway7xj67oj" path="res://scenes/menu_ui/settings_ui/homemade_background_2.png" id="2_ptrcn"]
[ext_resource type="FontFile" uid="uid://cg2mv3fl4pyoq" path="res://scenes/menu_ui/settings_ui/ARCADECLASSIC_2.TTF" id="2_qktny"]
[ext_resource type="FontFile" uid="uid://b6xg3e8vdpsqk" path="res://scenes/menu_ui/ingame_menu_ui/ARCADECLASSIC3.TTF" id="5_iv0h8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ynvnf"]
texture = ExtResource("2_ptrcn")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w8c81"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_frsak"]
bg_color = Color(0.141176, 0.137255, 0.423529, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ad8rx"]
bg_color = Color(0.177273, 0.0952555, 0.22619, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stt0o"]
bg_color = Color(0.141176, 0.137255, 0.423529, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pr8bq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6y7v0"]
bg_color = Color(0.177273, 0.0952555, 0.22619, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8nwxt"]
bg_color = Color(0.177273, 0.0952555, 0.22619, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1r64d"]
bg_color = Color(0.141176, 0.137255, 0.423529, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Settings" type="Control" node_paths=PackedStringArray("drop_down_menu_res")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cisaa")
drop_down_menu_res = NodePath("OptionButton")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ynvnf")

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 43.0
offset_right = 352.0
offset_bottom = 102.0
theme_override_fonts/font = ExtResource("5_iv0h8")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_w8c81")
theme_override_styles/hover = SubResource("StyleBoxFlat_frsak")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ad8rx")
theme_override_styles/normal = SubResource("StyleBoxFlat_stt0o")
script = ExtResource("1_cisaa")

[node name="exit_button" type="Button" parent="."]
layout_mode = 0
offset_left = 925.0
offset_top = 528.0
offset_right = 1098.0
offset_bottom = 595.0
theme_override_fonts/font = ExtResource("2_qktny")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxEmpty_pr8bq")
theme_override_styles/hover = SubResource("StyleBoxFlat_6y7v0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8nwxt")
theme_override_styles/normal = SubResource("StyleBoxFlat_1r64d")
text = "Exit Options"

[node name="volume_slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 163.0
offset_right = 326.0
offset_bottom = 207.0
min_value = -40.0

[node name="sensitivity_slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 237.0
offset_right = 326.0
offset_bottom = 281.0
min_value = 1.0
max_value = 5.0
step = 0.1
value = 1.0

[node name="brightness_slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 311.0
offset_right = 326.0
offset_bottom = 355.0

[node name="volume_label" type="Label" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 133.0
offset_right = 292.0
offset_bottom = 163.0
theme_override_colors/font_color = Color(0.655232, 0, 0.0175506, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_qktny")
theme_override_font_sizes/font_size = 30
text = "Volume"

[node name="light_label" type="Label" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 281.0
offset_right = 292.0
offset_bottom = 311.0
theme_override_colors/font_color = Color(0.655232, 0, 0.0175506, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_qktny")
theme_override_font_sizes/font_size = 30
text = "Brightness
"

[node name="sense_label" type="Label" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 207.0
offset_right = 292.0
offset_bottom = 237.0
theme_override_colors/font_color = Color(0.655232, 0, 0.0175506, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_qktny")
theme_override_font_sizes/font_size = 30
text = "Mouse Sensitivity
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8ujg4")
autoplay = true

[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="exit_button" to="." method="back_to_main_menu"]
[connection signal="value_changed" from="volume_slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="sensitivity_slider" to="." method="_on_sensitivity_slider_value_changed"]
